[package]
name = "wifi-cap-parser"
version = "0.1.0"
authors = ["Gavyn Riebau <gavyn.riebau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-file = "0.10.0"
glob = "0.3.0"
clap = "2.33.0"
shellexpand = "1.0.0"
regex = "1.3.1"
hex = "0.2.0"
